@@ -136,6 +136,7 @@ class AMAROK_EXPORT MainWindow : public KMainWindow
 
         void exportPlaylist() const;
         void slotShowActiveTrack() const;
+        void slotEditTrackInfo() const;
         void slotShowBookmarkManager() const;
         void slotShowEqualizer() const;
         void slotShowCoverManager() const;
